--- a/myConf/hypr/themes/cyberwave/waybar/config.jsonc
+++ b/myConf/hypr/themes/cyberwave/waybar/config.jsonc
@@ -130,7 +130,6 @@
     "custom/randwall": {
       "format": "󰏘",
       "on-click": "fish -c wallrand",
-      "on-scroll-up": "fish -c rollcont",
     },
     
     "tray": {
@@ -140,10 +139,7 @@
 
     "custom/launcher": {
       "format": "波",
-      "on-click": "bash $HOME/.config/rofi/launcher.sh",
-//    "on-click": "wofi --show drun -I -a -n -W 500 -H 376 -s ~/.config/wofi/themes/gruvbox.css",
-      "on-click-right": "bash $HOME/.config/rofi/run.sh"  
-//    "on-click-right": "wofi --show run -I -a -n -W 500 -H 376 -s ~/.config/wofi/themes/gruvbox.css"  
+      "on-click": "killall rofi || rofi -show drun -theme ~/.config/rofi/config.rasi",
     },
 
     "hyprland/workspaces": {
